--- a/web/assets/source/html/partials/settings.html
+++ b/web/assets/source/html/partials/settings.html
@@ -111,7 +111,7 @@
    </div>
 </div>
 <div class="p">
-   <h4 class="text-muted text-thin">Layout</h4>
+   <h4 translate="admin.offsidebar.setting.layout.LAYOUT" class="text-muted text-thin">Layout</h4>
    <div class="clearfix">
       <p translate="admin.offsidebar.setting.layout.FIXED" class="pull-left">Fixed</p>
       <div class="pull-right">
@@ -122,7 +122,7 @@
       </div>
    </div>
    <div class="clearfix">
-      <p class="pull-left">Boxed</p>
+      <p translate="admin.offsidebar.setting.layout.BOXED" class="pull-left">Boxed</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.isBoxed" />
@@ -132,9 +132,9 @@
    </div>
 </div>
 <div ng-if="!app.layout.horizontal" class="p">
-   <h4 class="text-muted text-thin">Aside</h4>
+   <h4 translate="admin.offsidebar.setting.aside.ASIDE" class="text-muted text-thin">Aside</h4>
    <div class="clearfix">
-      <p translate="admin.offsidebar.setting.layout.COLLAPSED" class="pull-left">Collapsed</p>
+      <p translate="admin.offsidebar.setting.aside.COLLAPSED" class="pull-left">Collapsed</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.isCollapsed" />
@@ -143,7 +143,7 @@
       </div>
    </div>
    <div class="clearfix">
-      <p class="pull-left">Float</p>
+      <p translate="admin.offsidebar.setting.aside.FLOAT" class="pull-left">Float</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.isFloat" />
@@ -152,7 +152,7 @@
       </div>
    </div>
    <div class="clearfix">
-      <p class="pull-left">Hover</p>
+      <p translate="admin.offsidebar.setting.aside.HOVER" class="pull-left">Hover</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.asideHover" />
