--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -120,6 +120,7 @@ file that was distributed with this source code.
                     </a>
 
                     <div class="navbar-left">
+                        {{ dump(_breadcrumb) }}
                         {% block sonata_breadcrumb %}
                             {% if _breadcrumb is not empty or action is defined %}
                                 <ol class="nav navbar-top-links breadcrumb">
@@ -188,7 +189,7 @@ file that was distributed with this source code.
                 <section class="sidebar">
                     {% block sonata_side_nav %}
                         {% block sonata_sidebar_search %}
-                            {% if app.security.token and is_granted('ROLE_SONATA_ADMIN') %}
+                            {% if app.security.token %}
                                 <form action="{{ url('sonata_admin_search') }}" method="GET" class="sidebar-form"
                                       role="search">
                                     <div class="input-group custom-search-form">
@@ -207,7 +208,7 @@ file that was distributed with this source code.
 
                         {% block side_bar_before_nav %} {% endblock %}
                         {% block side_bar_nav %}
-                            {% if app.security.token and is_granted('ROLE_SONATA_ADMIN') %}
+                            {% if app.security.token %}
                                 <ul class="sidebar-menu">
                                     {% for group in admin_pool.dashboardgroups %}
                                         {% set display = (group.roles is empty or is_granted('ROLE_SUPER_ADMIN') ) %}
