--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -9,11 +9,11 @@
       <ul class="nav">
          <!-- START user info-->
          <li class="has-user-block">
-            <div collapse="userBlockVisible" ng-controller="UserBlockController">
+            <div collapse="userBlockVisible" ng-controller="ProfileCtrl">
                <div class="item user-block">
                   <!-- User picture-->
                   <div class="user-block-picture text-center">
-                     <div class="user-block-status" tooltip="Open profile">
+                     <div ng-click="editProfile()" class="user-block-status" tooltip="Open profile">
                         <img ng-src="{{user.picture}}" alt="Avatar" class="img-thumbnail img-circle" />
                         <div class="circle circle-success circle-lg"></div>
                      </div>
