--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -18,7 +18,7 @@
                         <div class="circle circle-success circle-lg"></div>
                      </div>
 
-                     <button type="button" class="mb-sm mt btn btn-default" tooltip="Logout">
+                     <button ng-click="logout()" type="button" class="mb-sm mt btn btn-default" tooltip="Logout">
                         <i class="icon-logout"></i>
                      </button>
                   </div>
