--- a/web/assets/source/less/app/ngdialog.less
+++ b/web/assets/source/less/app/ngdialog.less
@@ -4,15 +4,20 @@
 
 .ngdialog {
 
-  &.ngdialog-theme-default {
+	&.ngdialog-theme-default {
 
-    .ngdialog-content {
-      background-color: #fff !important;
-      border-radius: @border-radius-base !important;
-      font-family: inherit !important;
-      font-size: inherit !important;
-      line-height: inherit !important;
-    }
+		.ngdialog-content {
+			background-color: #fff !important;
+			border-radius: @border-radius-base !important;
+			font-family: inherit !important;
+			font-size: inherit !important;
+			line-height: inherit !important;
+			padding: 0 !important;
 
-  }
+			>div {
+				padding: 1em;
+			}
+		}
+
+	}
 }
