--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -9,7 +9,7 @@
       <ul class="nav">
          <!-- START user info-->
          <li class="has-user-block">
-            <div collapse="userBlockVisible" ng-controller="ProfileCtrl">
+            <div collapse="userBlockVisible" ng-controller="ProfileCtrl" ng-class="{'whirl traditional': inLoading}">
                <div class="item user-block">
                   <!-- User picture-->
                   <div class="user-block-picture text-center">
