--- a/web/admin/source/resource/html/partials/top-navbar.html
+++ b/web/admin/source/resource/html/partials/top-navbar.html
@@ -2,9 +2,9 @@
 <nav role="navigation" class="navbar topnavbar">
    <!-- START navbar header-->
    <div class="navbar-header">
-      <a href="#/" class="navbar-brand">
+      <a ui-sref="app.dashboard" class="navbar-brand">
          <div class="brand-logo">
-            <img src="/admin/build/img/logo.png" alt="App Logo" class="img-responsive" />
+            <img src="/admin/build/img/logo.png" alt="App Logo1" class="img-responsive" />
          </div>
          <div class="brand-logo-collapsed">
             <img src="/admin/build/img/logo-single.png" alt="App Logo" class="img-responsive" />
