--- a/web/admin/source/resource/html/partials/top-navbar.html
+++ b/web/admin/source/resource/html/partials/top-navbar.html
@@ -4,10 +4,10 @@
    <div class="navbar-header">
       <a ui-sref="app.dashboard" class="navbar-brand">
          <div class="brand-logo">
-            <img src="/admin/build/img/logo.png" alt="App Logo" class="img-responsive" />
+            <img src="/admin/build/img/logo.png" alt="{{app.name}}" class="img-responsive" />
          </div>
          <div class="brand-logo-collapsed">
-            <img src="/admin/build/img/logo-single.png" alt="App Logo" class="img-responsive" />
+            <img src="/admin/build/img/logo-single.png" alt="{{app.name}}" class="img-responsive" />
          </div>
       </a>
    </div>
