--- a/web/admin/source/resource/html/partials/settings.html
+++ b/web/admin/source/resource/html/partials/settings.html
@@ -1,4 +1,4 @@
-<div ng-controller="UserSettingsController as vm">
+<div ng-controller="UserSettingsController as vm" ng-click="vm.changeLayout($event)">
     <h3 translate="admin.offsidebar.setting.SETTINGS" class="text-center text-thin">Settings</h3>
 
     <div class="p">
