--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="{{ _charset }}" />
-        <title>An Error Occurred: {{ status_text }}</title>
-    </head>
-    <body>
-        <h1>Oops! An Error Occurred</h1>
-        <h2>The server returned a "{{ status_code }} {{ status_text }}".</h2>
+<html lang="en" data-ng-app="angle">
 
-        <div>
-            Something is broken. Please let us know what you were doing when this error occurred.
-            We will fix it as soon as possible. Sorry for any inconvenience caused.
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="{{app.description}}">
+    <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
+    <title data-ng-bind="::pageTitle()">Angle - Angular Bootstrap Admin Template</title>
+    <!-- Bootstrap styles-->
+    <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap.css') }}" data-ng-if="!app.layout.isRTL">
+    <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap-rtl.css') }}" data-ng-if="app.layout.isRTL">
+    <!-- Application styles-->
+    <link rel="stylesheet" href="{{ asset('admin/build/css/app.css') }}" data-ng-if="!app.layout.isRTL">
+    <link rel="stylesheet" href="{{ asset('admin/build/css/app-rtl.css') }}" data-ng-if="app.layout.isRTL">
+    <!-- Themes-->
+    {% verbatim %}
+    <link rel="stylesheet" ng-href="{{app.layout.theme}}" data-ng-if="app.layout.theme">
+    {% endverbatim %}
+</head>
+
+<body data-ng-class="{ 'layout-fixed' : app.layout.isFixed, 'aside-collapsed' : app.layout.isCollapsed, 'layout-boxed' : app.layout.isBoxed, 'layout-fs': app.useFullLayout, 'hidden-footer': app.hiddenFooter, 'layout-h': app.layout.horizontal, 'aside-float': app.layout.isFloat, 'offsidebar-open': app.offsidebarOpen, 'aside-toggled': app.asideToggled}">
+<div data-preloader></div>
+<div data-ui-view="" data-autoscroll="false" class="wrapper"></div>
+<script src="{{ asset('admin/build/js/base.js') }}"></script>
+<script src="{{ asset('admin/build/js/build.js') }}"></script>
+<div class="wrapper ng-scope" data-autoscroll="false" data-ui-view="" style="">
+    <div class="ng-zoomBackDown ng-fluid ng-scope" autoscroll="false" ui-view="" style="">
+        <div class="abs-center wd-xl ng-scope">
+            <div class="text-center mb-xl">
+                <div class="text-lg mb-lg">{{ status_code }}</div>
+                <p class="lead m0">{{ status_text }}</p>
+            </div>
+            <div class="input-group mb-xl">
+                <input class="form-control" type="text" placeholder="Try with a search">
+                    <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">
+                        <em class="fa fa-search"></em>
+                    </button>
+                    </span>
+            </div>
+            <ul class="list-inline text-center text-sm mb-xl">
+                <li>
+                <li class="text-muted">|</li>
+                <li>
+                <li class="text-muted">|</li>
+                <li>
+            </ul>
+            <div class="p-lg text-center">
+                <span>©</span>
+                <span class="ng-binding" ng-bind="app.year"></span>
+                <span>-</span>
+                <span class="ng-binding" ng-bind="app.name"></span>
+                <br>
+                <span class="ng-binding" ng-bind="app.description"></span>
+            </div>
         </div>
-    </body>
+    </div>
+</div>
+</body>
+
 </html>
