--- a/web/admin/source/resource/less/app/layout.less
+++ b/web/admin/source/resource/less/app/layout.less
@@ -138,12 +138,13 @@ html, body {
   }
 
   > h3,
+  > div > h3,
   > .content-heading {
     font-size: @font-size-h3;
     line-height: @headings-line-height;
     color: #929292;
     margin: -15px;
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
     padding: 15px;
     font-weight: normal;
     background-color: @content-heading-bg;
@@ -153,6 +154,9 @@ html, body {
       font-size: 12px;
       color: @text-muted;
     }
+  }
+  > div > h3 {
+    margin: -20px;
   }
   > button, > .btn {
     margin: 10px 10px 0 0;
