--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -59,6 +59,7 @@
             </div>
         </div>
     </div>
+</div>
 <script src="{{ asset('admin/build/js/base.js') }}"></script>
 <script src="{{ asset('admin/build/js/build.js') }}"></script>
 </body>
