--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
-<html class="ng-scope js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" data-ng-app="angle">
+<html class="ng-scope js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="{{app.description}}">
     <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
-    <title data-ng-bind="::pageTitle()">Angle - Angular Bootstrap Admin Template</title>
-    <!-- Bootstrap styles-->
-    <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap.css') }}" data-ng-if="!app.layout.isRTL">
-    <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap-rtl.css') }}" data-ng-if="app.layout.isRTL">
+    <title>Angle - Angular Bootstrap Admin Template</title>
+    <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap.css') }}">
     <!-- Application styles-->
-    <link rel="stylesheet" href="{{ asset('admin/build/css/app.css') }}" data-ng-if="!app.layout.isRTL">
-    <link rel="stylesheet" href="{{ asset('admin/build/css/app-rtl.css') }}" data-ng-if="app.layout.isRTL">
+    <link rel="stylesheet" href="{{ asset('admin/build/css/app.css') }}">
     <!-- Themes-->
-    {% verbatim %}
-    <link rel="stylesheet" ng-href="{{app.layout.theme}}" data-ng-if="app.layout.theme">
-    {% endverbatim %}
 </head>
 
-<body data-ng-class="{ 'layout-fixed' : app.layout.isFixed, 'aside-collapsed' : app.layout.isCollapsed, 'layout-boxed' : app.layout.isBoxed, 'layout-fs': app.useFullLayout, 'hidden-footer': app.hiddenFooter, 'layout-h': app.layout.horizontal, 'aside-float': app.layout.isFloat, 'offsidebar-open': app.offsidebarOpen, 'aside-toggled': app.asideToggled}">
+<body>
 <div data-preloader></div>
-<div class="wrapper ng-scope" data-autoscroll="false" data-ui-view="" style="">
-    <div class="wrapper ng-scope" data-autoscroll="false" data-ui-view="" style="">
-        <div class="ng-zoomBackDown ng-fluid ng-scope" autoscroll="false" ui-view="">
+<div class="wrapper ng-scope" data-autoscroll="false">
+    <div class="wrapper ng-scope" data-autoscroll="false">
+        <div class="ng-zoomBackDown ng-fluid ng-scope" autoscroll="false">
             <div class="abs-center wd-xl ng-scope">
                 <div class="text-center mb-xl">
                     <div class="text-lg mb-lg">{{ status_code }}</div>
@@ -39,28 +32,26 @@
                 </div>
                 <ul class="list-inline text-center text-sm mb-xl">
                     <li>
-                        <a class="text-muted" ui-sref="app.dashboard" href="{{ path('araneum_manage_main' }}">Go to App</a>
+                        <a class="text-muted" href="{{ path('araneum_manage_main') }}">Go to App</a>
                     </li>
                     <li class="text-muted">|</li>
                     <li>
-                        <a class="text-muted" ui-sref="page.login" href="{{ path('araneum_manage_login' }}">Login</a>
+                        <a class="text-muted" href="{{ path('araneum_manage_login') }}">Login</a>
                     </li>
                     <li class="text-muted">|</li>
                     <li>
-                        <a class="text-muted" ui-sref="page.register" href="{{ path('araneum_manage_login' }}">Register</a>
+                        <a class="text-muted" href="{{ path('araneum_manage_login') }}">Register</a>
                     </li>
                 </ul>
                 <div class="p-lg text-center">
                     <span>©</span>
-                    <span class="ng-binding" ng-bind="app.year">{{ "now"|date("Y") }}</span>
+                    <span class="ng-binding">{{ "now"|date("Y") }}</span>
                     <span>-</span>
-                    <span class="ng-binding" ng-bind="app.name">Araneum</span>
+                    <span class="ng-binding">Araneum</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="{{ asset('admin/build/js/base.js') }}"></script>
-<script src="{{ asset('admin/build/js/build.js') }}"></script>
 </body>
 </html>
