--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
     <title>Angle - Angular Bootstrap Admin Template</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ asset('admin/build/css/bootstrap.css') }}">
     <!-- Application styles-->
     <link rel="stylesheet" href="{{ asset('admin/build/css/app.css') }}">
@@ -26,7 +25,7 @@
                     <input class="form-control" type="text" placeholder="Try with a search">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">
-                            <em class="fa fa-search"></em>
+                            <em class="glyphicons glyphicons-search"></em>
                         </button>
                     </span>
                 </div>
